fixed footer spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,8 @@
 @use "../../styles/mixins.scss" as *;
 
 .footer-list {
-    @include flexbox(row, left, normal);
-    margin: 3rem 1rem;
+    @include flexbox(row, center, normal);
+    margin: 3rem auto;
 	padding: 0;
     list-style-type: none;
     flex-wrap: wrap;
